[package]
name = "credential_truth"
version = "0.0.1"
edition = "2021"
authors = ["Will Burden"]
description = "A Docker Credential Helper depending on pass."
repository = "https://github.com/willburden/credential_truth"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
log = "0.4.14"

[dependencies.simple_logger]
version = "~1.13.0"
default-features = false
features = ["colors", "stderr"]
